--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,11 @@
 name = "lori"
 version = "0.1.0"
 authors = ["Sahan Fernando <sahan.h.fernando@gmail.com>"]
+edition = "2021"
 
 [dependencies]
-nom = "*"
+nom = "^7.1.3"
+# TODO: Bump to 4.2.0
 ordered-float = "0.5.0"
+anyhow = "^1.0.80"
+thiserror = "^1.0"
